--- a/app/src/main/res/layout/key_layout_normal.xml
+++ b/app/src/main/res/layout/key_layout_normal.xml
@@ -161,88 +161,107 @@
                         android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="1"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn2"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="2"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn3"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="3"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn4"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="4"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="5"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn6"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="6"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn7"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="7"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn8"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="8"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn9"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="9"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/btn0"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="0"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbservice.fontSize}" />
+                        android:textSize="@{kbservice.fontSize}"
+                        app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                     <Button
                         android:id="@+id/keyboardNumberRightMargin"
