--- a/app/src/main/res/layout/fragment_cursor.xml
+++ b/app/src/main/res/layout/fragment_cursor.xml
@@ -1,214 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <LinearLayout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="kbviewmodel"
+            type="com.sb.fittingKeyboard.service.viewmodel.SharedKBViewModel" />
+
+        <variable
+            name="kbservice"
+            type="com.sb.fittingKeyboard.service.InputMethodServiceViewRefactor" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/frag_cursor_copySelected"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:text="복사"
-                android:textSize="12dp" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/frag_cursor_pasteSelected"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:text="붙여넣기"
-                android:textSize="12dp" />
+                <Button
+                    android:id="@+id/frag_cursor_copySelected"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> kbservice.copyText()}"
+                    android:text="복사"
+                    android:textSize="12dp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
 
-            <Button
-                android:id="@+id/frag_cursor_cutSelected"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                <Button
+                    android:id="@+id/frag_cursor_pasteSelected"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> kbservice.pasteText()}"
+                    android:text="붙여넣기"
+                    android:textSize="12dp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+
+                <Button
+                    android:id="@+id/frag_cursor_cutSelected"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> kbservice.cutText()}"
+                    android:text="잘라내기"
+                    android:textSize="12dp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.25"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/frag_cursor_selectAll"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> kbservice.selectAll()}"
+                    android:text="전체 선택"
+                    android:textSize="12dp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_firstChar"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToFirst()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_firstpage_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_up"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToUp()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_arrowup_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_lastChar"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToLast()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_lastpage_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_foredelete"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:gravity="center"
+                    android:onClick="@{() -> kbservice.foreDelFunction()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_foredelete_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.25"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/frag_cursor_selectWord"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> kbservice.selectWord()}"
+                    android:text="선택"
+                    android:textSize="12dp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_left"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToLeft()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_arrowleft_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_down"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToDown()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_arrowdown_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_right"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:onClick="@{() -> kbservice.moveCursorToRight()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_arrowright_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_delete"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:elevation="2dp"
+                    android:gravity="center"
+                    android:onClick="@{() -> kbservice.delFunction()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_delete_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:text="잘라내기"
-                android:textSize="12dp" />
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_kbd"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:elevation="2dp"
+                    android:gravity="center"
+                    android:onClick="@{() -> kbviewmodel.changeMode(3)}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_kbd_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+
+                <Button
+                    android:id="@+id/frag_cursor_space"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.5"
+                    android:gravity="center"
+                    android:onClick="@{(v) -> kbservice.inputSpecial(v)}"
+                    android:text="SPACE"
+                    android:textColor="@color/darkgrey"
+                    android:textSize="14sp"
+                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+
+                <ImageButton
+                    android:id="@+id/frag_cursor_enter"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:elevation="2dp"
+                    android:gravity="center"
+                    android:onClick="@{() -> kbservice.enterFunction()}"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/keyic_enter_black"
+                    app:padding="@{kbviewmodel.observeHeight}" />
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.25"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/frag_cursor_selectAll"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:text="전체 선택"
-                android:textSize="12dp" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_firstChar"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_firstpage_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_up"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_arrowup_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_lastChar"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_lastpage_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_foredelete"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:elevation="2dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_foredelete_black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.25"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/frag_cursor_selectWord"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:text="선택"
-                android:textSize="12dp" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_left"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_arrowleft_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_down"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_arrowdown_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_right"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_arrowright_black" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_delete"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_delete_black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/frag_cursor_kbd"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:gravity="center"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_kbd_black" />
-
-            <Button
-                android:id="@+id/frag_cursor_space"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:background="@drawable/view_setting"
-                android:gravity="center"
-                android:text="SPACE"
-                android:textColor="@color/darkgrey"
-                android:textSize="14sp" />
-
-            <ImageButton
-                android:id="@+id/frag_cursor_enter"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:background="@drawable/view_setting"
-                android:elevation="2dp"
-                android:gravity="center"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/keyic_enter_black" />
-        </LinearLayout>
-    </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</layout>
